--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
   <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" rel="stylesheet">-->
   <link href="assets/css/datepicker.min.css" rel="stylesheet">
   <!-- FancyBox -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link  href="assets/css/bootstrap.min.css" rel="stylesheet">
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
   <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />-->
   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
