--- a/src/index.html
+++ b/src/index.html
@@ -13,66 +13,27 @@
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-WWZRHL7');</script>
   <!-- End Google Tag Manager -->
-
+  <base href="/">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/fontawesome.min.js"></script>
-  <!--<script src="assets/js/fontawesome.min.js"></script>-->
-  <!--Plugin CSS file with desired skin-->
- <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />-->
   <link rel="stylesheet" href="assets/css/ion.rangeSlider.min.css" />
-  <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">-->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <!-- <link rel="stylesheet" href="assets/css/font-awesome.min.css">-->
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- DatePicker -->
-  <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" rel="stylesheet">-->
   <link href="assets/css/datepicker.min.css" rel="stylesheet">
   <!-- FancyBox -->
   <link  href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-  <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />-->
   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css" />
-
-  <!--<link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />-->
-  <!--<script type="text/javascript">
-    var swiper = new Swiper('.swiper-container', {
-      slidesPerView: 1,
-      spaceBetween: 10,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
-      breakpoints: {
-        640: {
-          slidesPerView: 1,
-          spaceBetween: 20,
-        },
-        768: {
-          slidesPerView: 4,
-          spaceBetween: 40,
-        },
-        1024: {
-          slidesPerView: 5,
-          spaceBetween: 50,
-        },
-      }
-    });
-  </script>-->
   <script type="text/javascript">
-
-
     if (window.location.protocol == "http:") {
 
       /* var cloc = window.location.href;
@@ -135,29 +96,17 @@
 
 <body>
 <app-root></app-root>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.easing.1.3.js"></script>
-<!--<script src="assets/js/jquery-2.2.0.min.js"></script>-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>-->
 <script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"></script>-->
 <script src="assets/js/datepicker.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>-->
 <script src="assets/js/jquery.fancybox.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-
-<script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXm7UUp0mQF1gmX67DqfX7RKk1iTGrDvo&libraries=places&language=en"></script>
-<!--<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>-->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXm7UUp0mQF1gmX67DqfX7RKk1iTGrDvo&libraries=places&language=en"></script>
 <script src="assets/js/sweetalert.min.js"></script>
-<!--<script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>-->
 <script src="assets/js/index.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>-->
 <script src="assets/js/ion.rangeslider.min.js"></script>
-<!--<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.0/circle-progress.min.js'></script>-->
 <script src='assets/js/circle-progress.min.js'></script>
 <script src="https://js.stripe.com/v3/"></script>
 <!-- Google Tag Manager (noscript) -->
@@ -182,8 +131,5 @@
     a.appendChild(r);
   })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
 </script>
-
-
 </body>
-
 </html>
