--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-WWZRHL7');</script>
   <!-- End Google Tag Manager -->
-  <base href="/us/">
+  <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
