--- a/src/index.html
+++ b/src/index.html
@@ -116,9 +116,9 @@
 <script type="text/javascript">
   if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
     if (window.location.protocol == "http:") {
-      /*  var cloc = window.location.href;
+        var cloc = window.location.href;
         var rest = cloc.replace("http://", "");
-        window.location.href = "https://" + rest;*/
+        window.location.href = "https://" + rest;
     }
   }
   (function (h, o, t, j, a, r) {
