--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-WWZRHL7');</script>
   <!-- End Google Tag Manager -->
-  <base href="/">
+  <base href="/us/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
@@ -95,18 +95,28 @@
 
 <body>
 <app-root></app-root>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.easing.1.3.js"></script>
-<script src="assets/js/popper.min.js"></script>
+<!--<script src="assets/js/jquery.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+<!--<script src="assets/js/jquery.easing.1.3.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js" integrity="sha512-xq+0+dRhI6SZOh+lDnMJEju2p2YPINflJLcYrRAsIMaXnJi6/V3lppCMCYsB2MLeF2E93r+fVo0MioY90pNzpw==" crossorigin="anonymous"></script>
+<!--<script src="assets/js/popper.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/datepicker.min.js"></script>
-<script src="assets/js/jquery.fancybox.min.js"></script>
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>-->
+<!--<script src="assets/js/datepicker.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"></script>
+<!--<script src="assets/js/jquery.fancybox.min.js"></script>-->
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXm7UUp0mQF1gmX67DqfX7RKk1iTGrDvo&libraries=places&language=en"></script>
-<script src="assets/js/sweetalert.min.js"></script>
-<script src="assets/js/index.js"></script>
-<script src="assets/js/ion.rangeslider.min.js"></script>
-<script src='assets/js/circle-progress.min.js'></script>
+<!--<script src="assets/js/sweetalert.min.js"></script>-->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<!--<script src="assets/js/index.js"></script>-->
+<script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
+<!--<script src="assets/js/ion.rangeslider.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.0/circle-progress.min.js'></script>
+<!--<script src='assets/js/circle-progress.min.js'></script>-->
 <script src="https://js.stripe.com/v3/"></script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WWZRHL7" height="0" width="0"
