--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
 <!--<script src="assets/js/jquery.fancybox.min.js"></script>-->
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXm7UUp0mQF1gmX67DqfX7RKk1iTGrDvo&libraries=places&language=en"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4onu-y-_thwzwRNFQKiTzhLgf63dIJo0&libraries=places&language=en"></script>
 <!--<script src="assets/js/sweetalert.min.js"></script>-->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!--<script src="assets/js/index.js"></script>-->
@@ -125,11 +125,11 @@
 
 <script type="text/javascript">
   if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
-    if (window.location.protocol == "http:") {
+ /*   if (window.location.protocol == "http:") {
         var cloc = window.location.href;
         var rest = cloc.replace("http://", "");
         window.location.href = "https://" + rest;
-    }
+    }*/
   }
   (function (h, o, t, j, a, r) {
     h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
