--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/fontawesome.min.js"></script>
+  <script src=
+                  "https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js">
+  </script>
   <link rel="stylesheet" href="assets/css/ion.rangeSlider.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +38,7 @@
   <script type="text/javascript">
     if (window.location.protocol == "http:") {
 
-      /* var cloc = window.location.href;
+     /*  var cloc = window.location.href;
        var rest = cloc.replace("http://", "");
 
        window.location.href = "https://" + rest;*/
@@ -125,11 +128,11 @@
 
 <script type="text/javascript">
   if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
- /*   if (window.location.protocol == "http:") {
-        var cloc = window.location.href;
-        var rest = cloc.replace("http://", "");
-        window.location.href = "https://" + rest;
-    }*/
+    // if (window.location.protocol == "http:") {
+    //     var cloc = window.location.href;
+    //     var rest = cloc.replace("http://", "");
+    //     window.location.href = "https://" + rest;
+    // }
   }
   (function (h, o, t, j, a, r) {
     h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
