--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-WWZRHL7');</script>
   <!-- End Google Tag Manager -->
-  <base href="/us/">
+  <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
@@ -36,13 +36,13 @@
   <link  href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
   <script type="text/javascript">
-    if (window.location.protocol == "http:") {
+    // if (window.location.protocol == "http:") {
 
-     /*  var cloc = window.location.href;
-       var rest = cloc.replace("http://", "");
+    //  /*  var cloc = window.location.href;
+    //    var rest = cloc.replace("http://", "");
 
-       window.location.href = "https://" + rest;*/
-    }
+    //    window.location.href = "https://" + rest;*/
+    // }
 
     function ShowThankYouMsg() {
       $.msgBox({
@@ -127,13 +127,13 @@
 <!-- End Google Tag Manager (noscript) -->
 
 <script type="text/javascript">
-  if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
-    if (window.location.protocol == "http:") {
-        var cloc = window.location.href;
-        var rest = cloc.replace("http://", "");
-        window.location.href = "https://" + rest;
-    }
-  }
+  // if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
+  //   if (window.location.protocol == "http:") {
+  //       var cloc = window.location.href;
+  //       var rest = cloc.replace("http://", "");
+  //       window.location.href = "https://" + rest;
+  //   }
+  // }
   (function (h, o, t, j, a, r) {
     h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
     h._hjSettings = { hjid: 1677899, hjsv: 6 };
