--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
-  
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/fontawesome.min.js"></script>
@@ -93,7 +93,7 @@
   </script>
 
 
-</head>
+  <link rel="stylesheet" href="styles.b925af8b3c1349da0075.css"></head>
 
 
 <body>
@@ -127,13 +127,13 @@
 <!-- End Google Tag Manager (noscript) -->
 
 <script type="text/javascript">
-  // if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
-  //   if (window.location.protocol == "http:") {
-  //       var cloc = window.location.href;
-  //       var rest = cloc.replace("http://", "");
-  //       window.location.href = "https://" + rest;
-  //   }
-  // }
+  if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
+   /* if (window.location.protocol == "http:") {
+      var cloc = window.location.href;
+      var rest = cloc.replace("http://", "");
+      window.location.href = "https://" + rest;
+    }*/
+  }
   (function (h, o, t, j, a, r) {
     h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
     h._hjSettings = { hjid: 1677899, hjsv: 6 };
@@ -143,5 +143,5 @@
     a.appendChild(r);
   })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
 </script>
-</body>
+<script src="polyfills-es5.ac1f3bc98d6ca85bcbc6.js" nomodule defer></script><script src="polyfills-es2015.8a9e752e97e1afbeec3f.js" type="module"></script><script src="runtime-es2015.24b02acc1f369d9b9f37.js" type="module"></script><script src="main-es2015.07f14ea833387f3b559c.js" type="module"></script><script src="runtime-es5.24b02acc1f369d9b9f37.js" nomodule defer></script><script src="main-es5.07f14ea833387f3b559c.js" nomodule defer></script></body>
 </html>
