--- a/src/index.html
+++ b/src/index.html
@@ -128,11 +128,11 @@
 
 <script type="text/javascript">
   if (window.location.href.replace('/', '').split('/')[1] != 'localhost:4200') {
-    if (window.location.protocol == "http:") {
+  /*  if (window.location.protocol == "http:") {
       var cloc = window.location.href;
       var rest = cloc.replace("http://", "");
       window.location.href = "https://" + rest;
-    }
+    }*/
   }
   (function (h, o, t, j, a, r) {
     h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
