--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0"/>
   <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
 
   <meta charset="utf-8">
